qr 코드 생성 sample 추가 (#14)
* qr 코드 생성 sample 추가

* qr 코드 생성 의존성 지정 방식 변경

* 테스트 오류 해결

테스트 전용 yml 파일을 만들고 환경변수를 최소화했습니다.
Stateless 환경에서 큰 의미가 없는 csrf 설정을 해제했습니다.

* qr 코드 생성 sample 추가

---------

Co-authored-by: dsyang <neoanimato@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
 
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.google.zxing:javase:3.5.1'
+
+    implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.5.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
